--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "marked": "0.7.0",
     "md5": "2.2.1",
     "mongoose": "5.7.13",
+    "node-pre-gyp": "^0.17.0",
     "nodemon": "1.18.7",
     "passport": "0.4.0",
     "passport-github2": "0.1.11"
